[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "cy2023"
# path = "src/cy2023/src/lib.rs" 

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
cy2023 = { version = "*", path = "./src/cy2023/" }
