[package]
name = "cy2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
winnow = { version = "0.5.26" }
pariter = "0.5.1"
rayon = "1.10"

itertools = "0.12.0"
snafu = { version = "0.7.5", features = ["rust_1_61", "backtraces-impl-std"] }
